--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,54 @@
-apply plugin: 'groovy'apply plugin: 'maven'apply plugin: 'war'apply plugin: 'eclipse'group = "com.taimi.sample"sourceCompatibility = "1.6"targetCompatibility = "1.6"dependencies {  compile (group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.8')  providedCompile (group: 'com.liferay.portal', name: 'util-bridges', version: '6.2.3')  providedCompile (group: 'javax.portlet', name: 'portlet-api', version: '2.0')  providedCompile (group: 'com.liferay.portal', name: 'portal-service', version: '6.2.3')}repositories {  mavenLocal()  mavenCentral()}buildscript {    repositories {		mavenCentral()        maven { url 'http://repo.jfrog.org/artifactory/gradle-plugins' }		jcenter()    }    dependencies {        classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.1.0')		    }}task deploy (dependsOn: war){    copy {        from "build/libs"        into "C:/dev/liferay-portal-6.2-ce-ga4/deploy"        include "*.war"    }}task wrapper( type: Wrapper ) {  gradleVersion = '1.10'}
+apply plugin: 'groovy'
+apply plugin: 'maven'
+apply plugin: 'war'
+apply plugin: 'eclipse'
+
+group = "com.taimi.sample"
+
+sourceCompatibility = "1.6"
+targetCompatibility = "1.6"
+
+dependencies {
+  compile (group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.8')
+  compile (group: 'org.mongodb', name: 'mongo-java-driver', version: '2.13.2')
+  compile (group: "log4j", name: 'log4j', version: '1.2.17')
+  compile (group: 'org.springframework', name: 'spring-context', version: '4.1.7.RELEASE')
+  compile (group: 'org.springframework', name: 'spring-core', version: '4.1.7.RELEASE')
+  compile (group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.8.0.RELEASE')
+  providedCompile (group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1')
+  providedCompile (group: 'com.liferay.portal', name: 'util-bridges', version: '6.2.3')
+  providedCompile (group: 'javax.portlet', name: 'portlet-api', version: '2.0')
+  providedCompile (group: 'com.liferay.portal', name: 'portal-service', version: '6.2.3')
+}
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+}
+
+buildscript {
+    repositories {
+		mavenCentral()
+        maven { url 'http://repo.jfrog.org/artifactory/gradle-plugins' }
+		jcenter()
+    }
+    dependencies {
+        classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.1.0')
+		
+    }
+}
+
+sourceSets { main { resources { srcDir 'src/main/java'	} }	}
+
+task deploy (dependsOn: war){
+    copy {
+        from "build/libs"
+        into "D:/workspaces/liferayskillz/liferay-portal-6.2-ce-ga4/deploy"
+        include "*.war"
+    }
+}
+
+
+task wrapper( type: Wrapper ) {
+  gradleVersion = '2.6'
+}
