--- a/build.xml
+++ b/build.xml
@@ -2,5 +2,6 @@
 <!DOCTYPE project>
 
 <project name="LiferayPlayground-portlet" basedir="." default="deploy">
+	<property file="build.${user.name}.properties"/>
 	<import file="${project.dir}/portlets/build-common-portlet.xml" />
 </project>
